--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -396,9 +396,8 @@ jobs:
           pushd synced-loggregator-release
             export GOPATH="$PWD"
             export PATH="$GOPATH/bin:$PATH"
-            pushd src/code.cloudfoundry.org/loggregator
-              go test -race `go list ./... | grep -v lats`
-            popd
+            export TERM=xterm
+            ./scripts/test
           popd
   - task: commit
     config:
@@ -410,10 +409,10 @@ jobs:
       inputs:
         - name: synced-loggregator-release
       outputs:
-      - name: loggregator-release-updated
+      - name: committed-loggregator-release
       params:
         SOURCE: synced-loggregator-release
-        PATHS: src/code.cloudfoundry.org/loggregator
+        PATHS: "src/code.cloudfoundry.org/loggregator packages"
         COMMIT_MESSAGE: "Bump loggregator"
         OUTPUT: committed-loggregator-release
       run:
@@ -471,35 +470,9 @@ jobs:
           pushd synced-loggregator-release
             export GOPATH="$PWD"
             export PATH="$GOPATH/bin:$PATH"
-            pushd src/code.cloudfoundry.org/loggregator
-              go test -race `go list ./... | grep -v lats`
-            popd
+            export TERM=xterm
+            ./scripts/test
           popd
-  - task: commit
-    config:
-      platform: linux
-      image_resource:
-        type: docker-image
-        source:
-          repository: loggregator/base
-      inputs:
-      - name: synced-loggregator-release
-      outputs:
-      - name: loggregator-release-updated
-      params:
-        SOURCE: synced-loggregator-release
-        PATHS: src/code.cloudfoundry.org/loggregator
-        COMMIT_MESSAGE: "Updated loggregator-release"
-        OUTPUT: committed-loggregator-release
-      run:
-        path: bash
-        args:
-        - -c
-        - {{commit}}
-  - put: loggregator-release-updated
-    params:
-      repository: committed-loggregator-release
-      rebase: false
 
 - name: cf-deploy
   serial: true
@@ -518,6 +491,7 @@ jobs:
       trigger: true
       passed:
       - loggregator-bump-submodule
+      - loggregator-release-tests
     - get: cf-syslog-drain-release
       trigger: true
       passed:
