Use develop for loggregator-release when bumping
Signed-off-by: Johanna Smith <josmith@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -138,7 +138,7 @@ resources:
   type: git
   source:
     uri: git@github.com:cloudfoundry/loggregator-release
-    branch: master
+    branch: develop
     private_key: {{cf-loggregator-oauth-bot-key}}
     ignore_paths:
     - .final_builds
