update for correct inputs
Signed-off-by: Eno Compton <ecompton@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -358,7 +358,7 @@ jobs:
       outputs:
         - name: synced-loggregator-release
       params:
-        RELEASE: loggregator-release
+        RELEASE: bumped-loggregator-release
         OUTPUT: synced-loggregator-release
       run:
         path: bash
