Ensure loggregator tests do not install binaries
Signed-off-by: Andrew Poydence <apoydence@pivotal.io>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -250,7 +250,7 @@ jobs:
               export PATH="$GOPATH/bin:$PATH"
 
               pushd src/code.cloudfoundry.org/loggregator
-                go get -t ./...
+                go get -t -d ./...
                 go test -race `go list ./... | grep -v lats`
               popd
             popd
