--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -49,6 +49,11 @@ groups:
   - statsd-injector-diff-cert-generation-scripts
 
 resources:
+- name: 10m
+  type: time
+  source:
+    interval: 10m
+
 - name: cats-concourse-task
   type: git
   source:
@@ -221,8 +226,11 @@ jobs:
   serial: true
   public: true
   plan:
-  - get: loggregator-src
-    trigger: true
+  - aggregate:
+    - get: loggregator-src
+      trigger: true
+    - get: 10m
+      trigger: true
   - aggregate:
     - task: run-tests
       timeout: 10m
