Switch cf-deployment branch to develop for playground
Signed-off-by: Brady Love <blove@pivotal.io>

--- a/pipelines/playground.yml
+++ b/pipelines/playground.yml
@@ -19,7 +19,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/cf-deployment
-    branch: master
+    branch: develop
 
 - name: loggregator
   type: git
